dotNet-service-deploy/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-dotnet-service
  name: simple-dotnet-service

spec:
  selector:
    app: simple-dotnet-service
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
